src/objects/Product_Group_Indications_GLBL__c.object
<CustomObject>
    <description>Created to support a many to many relationship between Product Catalogue and Product Indication. Oliver Dunford 24th Oct 2013.</description>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <description>Legal Status of Indication for the Product Group. It can have following possible value:
Created by John A Adams 11/1/2013</description>
        <label>Approval Status</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apprvl_Dt_GLBL__c</fullName>
        <description>The day, month, year, and century in which the Product Group has been legally approved to be used for the related Indication.
Created by John A Adams 11/1/2013</description>
        <label>Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cease_Pblsh_Dt_GLBL__c</fullName>
        <description>This represents the last date on which that record was published/refreshed in the Material ODS.   When this date is populated, it indicates that the record has been deleted.  This is one of the two fields that would be used for delta detection of changes to the Material ODS.
Created by John A Adams 11/1/2013</description>
        <label>Cease Publish Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Crt_Dt_GLBL__c</fullName>
        <description>This represents the date on which the record was initially created in the Material Master Hub database.
Created by John A Adams 11/1/2013</description>
        <label>ODS Created Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Dt_GLBL__c</fullName>
        <description>Unapproved, Approved, Revoked
Created by John A Adams 11/1/2013</description>
        <label>End Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hrchy_Typ_GLBL__c</fullName>
        <description>This code classifies the scope of this relationship.  Most commonly, it identifies which country the relationship applies to.  Since the Material ODS also provides the country code associated with the record, this field would not be used unless more than one kind of relationship was established in a specific country.
Created by John A Adams 11/1/2013</description>
        <label>Hierarchy Type</label>
        <length>14</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lst_Pblsh_Dt_GLBL__c</fullName>
        <description>This represents the date on which information was last published for this record to the Material ODS.  This date will be populated when the record is initially created in the ODS or when it is updated.  This is one of the two fields that would be used for delta detection of changes to the Material ODS.  
Created by John A Adams 11/1/2013</description>
        <label>Last Publish Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Product_Group_GLBL__c</fullName>
        <description>Master detail relationship to Product Catalogue.  Used to model GSO Material ODS tables.

Created by Oliver Dunford 24th Oct 2013.</description>
        <label>Product Group</label>
        <referenceTo>Product_Group_GLBL__c</referenceTo>
        <relationshipLabel>Product Group Indications</relationshipLabel>
        <relationshipName>Product_Catalogue_Indications</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Product_Indication_GLBL__c</fullName>
        <description>Used for intersection between product group and Indication.  Oliver Dunford 4th Nov 2013.</description>
        <label>Product Indication</label>
        <referenceTo>Product_Indication_GLBL__c</referenceTo>
        <relationshipLabel>Product Group Indications</relationshipLabel>
        <relationshipName>Product_Group_Indications</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Revoke_Dt_GLBL__c</fullName>
        <description>The day, month, year, and century in which the approval on the Product Group to be used for an Indication has been revoked.
Created by John A Adams 11/1/2013</description>
        <label>Revoke Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Dt_GLBL__c</fullName>
        <description>The day, month, year, and century in which the relationship becomes effective.
Created by John A Adams 11/1/2013</description>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Updt_Dt_GLBL__c</fullName>
        <description>This represents the date on which the record was last updated in the Material Master Hub database. 
Created by John A Adams 11/1/2013</description>
        <label>ODS Updated Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <label>Product Group Indication</label>
    <nameField>
        <displayFormat>PCI-{000000}</displayFormat>
        <label>Product Catalogue Indications Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Group Indications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>